# ffxivdiscordbot

./: .gitignore  .token  Cargo.toml  README.md
src/: chardata.rs  lib.rs  main.rs
