[package]
name = "discord_bot_practice"
version = "0.1.0"
authors = ["joseph-salmingo <joseph.salmingo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
reqwest = {version = "0.10.6", features = ["json"] }
tokio = {version = "0.2.21", features = ["full"] }
serde = "1.0.114"